--- a/shiny_files/points_boundary.ipynb
+++ b/shiny_files/points_boundary.ipynb
@@ -105,6 +105,116 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prepare Data Part"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob\n",
+    "from datetime import datetime\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import tifffile as tiff\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#read tiff file\n",
+    "pred_tiff = tiff.imread('predict.tif')\n",
+    "#shape of tiff file\n",
+    "num_imgs, row_num, col_num = pred_tiff.shape\n",
+    "#list all the true positive\n",
+    "with open('true_positive_index.txt','r') as file:\n",
+    "    tp_idx = file.read().split('\\n')\n",
+    "    #get rid of null, tranform str to int\n",
+    "    tp_idx = [int(idx) for idx in tp_idx if idx]\n",
+    "#how many tp img in there\n",
+    "tp_num = len(tp_idx)\n",
+    "#subset the tiff file\n",
+    "pred_tiff_tp = pred_tiff[tp_idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#column data for X and row data for y\n",
+    "num = 1\n",
+    "#initialize the dataframe\n",
+    "plot_mat_all = pd.DataFrame()\n",
+    "for idx in tp_idx:\n",
+    "    #get the tp ndarray\n",
+    "    pred_tiff_i = pred_tiff[idx]\n",
+    "    #row = x, col = y in plot\n",
+    "    plot_mat_i = pd.DataFrame(np.argwhere(pred_tiff_i == 0),columns=['row','col'])\n",
+    "    plot_mat_i['emb_num'] = num\n",
+    "    plot_mat_all = plot_mat_all.append(plot_mat_i)\n",
+    "    num = num+ 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Time data\n",
+    "#list all the image paths in the folder\n",
+    "alcat_2_stem_paths = sorted(glob.glob('../Done/Processed/Alclat2_stem.DONEGOOD.HANNAH.9.26/*.png'))\n",
+    "#split the path into file name\n",
+    "alcat_2_stem_files = [os.path.split(path)[1] for path in alcat_2_stem_paths]\n",
+    "#split the file names to datetime strings\n",
+    "alcat_2_stem_dt_strs = [str.split(file,'.')[0] for file in alcat_2_stem_files]\n",
+    "#convert the datetime strings into datetime object, and \n",
+    "alcat_2_stem_dt = [datetime.strptime(dt_str,'%Y%m%d-%H%M%S') for dt_str in alcat_2_stem_dt_str]\n",
+    "#transform the difference datetime object into minutes\n",
+    "alcat_2_stem_dt_diff = [np.round((end_dt - alcat_2_stem_dt[0]).total_seconds()/60.0, 2)\n",
+    "                        for end_dt in alcat_2_stem_dt]\n",
+    "number_emb = pd.Series(np.arange(79)+1)\n",
+    "embolism_time = pd.Series(alcat_2_stem_dt)[tp_idx].reset_index().iloc[:,1]\n",
+    "diff_time_list_tp = pd.Series(alcat_2_stem_dt_diff)[tp_idx].reset_index().iloc[:,1]\n",
+    "#put all embolism data together\n",
+    "embolism_table = pd.DataFrame({'embolism_time' : embolism_time, \n",
+    "        'time_since_start(mins)' : diff_time_list_tp,\n",
+    "        'num_emb' : number_emb})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#merge the two datafram togther \n",
+    "plot_mat_time = plot_mat_all.merge(embolism_table, left_on = 'emb_num', right_on = 'num_emb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save the data into csv format\n",
+    "#plot_mat_time.to_csv('emb_points_time.csv')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
