--- a/shiny_files/Shiny Plot.Rmd
+++ b/shiny_files/Shiny Plot.Rmd
@@ -4,17 +4,6 @@ author: "Dingyi Fang"
 date: "3/12/2020"
 output: html_document
 ---
-#user-specified arguments and load pre-processed shiny data
-```{r}
-img_dir <- '../../Done/Processed'
-dir_path <- 'F:/server_output/processed/v11/Alclat2_stem.DONEGOOD.HANNAH.9.26/v11.0_0_1_900'
-dir_split <- strsplit(dir_path,"/")[[1]]
-version_name <- dir_split[length(dir_split)-2]
-folder_name <- dir_split[length(dir_split)-1]#Alclat2_stem.DONEGOOD.HANNAH.9.26
-folder_name_short <- strsplit(folder_name,".", fixed = TRUE)[[1]][1]#Alclat2_stem. fixed=TRUE to avoid interpreting "." as a regex
-output_dir <- 'F:/emb_data'
-```
-
 #loading  required modules
 ```{r}
 library(bioimagetools)
@@ -24,15 +13,14 @@ library(plotly)
 ```
 #Read Data from TIFF file
 ```{r}
-pred_tiff = bioimagetools::readTIF(file.path(dir_path,'predict.tif'))
+pred_tiff = bioimagetools::readTIF('a2_stem/v9.3_0_1_900/predict.tif')
 num_imgs <- dim(pred_tiff)[3]
 row_num  <- dim(pred_tiff)[1]
 col_num  <- dim(pred_tiff)[2] 
 ```
-
 #get the idx name
-```{r,eval=FALSE,include=FALSe}
-tp_names <- list.files(file.path(img_dir,folder_name))
+```{r}
+tp_names <- list.files('Alclat2_stem.DONEGOOD.HANNAH.9.26')
 tp_img_idx <-  c()
 for (name in tp_names) {
   tp_idx <- as.numeric(unlist(strsplit(name,'.jpg')))
@@ -45,15 +33,14 @@ tp_num <- length(tp_img_idx)
 ```
 #get the idx name from txt file
 ```{r}
-tp_img_idx <- read.csv(file.path(dir_path,'true_positive_index.txt'),header = FALSE)
+tp_img_idx <- read.csv('a2_stem/true_positive_index.txt',header = FALSE)
 tp_img_idx <- tp_img_idx$V1 + 1
 tp_num <- length(tp_img_idx)
 ```
 
-
 #get the time stamps
 ```{r}
-all_files <- list.files(file.path(img_dir,folder_name), pattern = '.png')
+all_files <- list.files('Alclat2_stem.DONEGOOD.HANNAH.9.26', pattern = '.png')
 #%Y%e%d-%H%M%S
 date_time_list = NULL
 #initial the start time 
@@ -89,7 +76,7 @@ colnames(embolism_table) <- c('embolism_time','time_since_start(mins)','number_e
 ```
 #data after vectorize, subset the embolism table that only contain those passed alpha shape
 ```{r}
-polygon_vertices <- read.csv(file.path(output_dir,version_name,folder_name_short,'polygon_vertices_df.csv'),row.names = 1) #from points_boundary.ipynb
+polygon_vertices <- read.csv('polygon_vertices_df.csv',row.names = 1)
 embo_table_alpha <- embolism_table[embolism_table$number_emb %in% unique(polygon_vertices$Z),]
 ```
 
@@ -140,14 +127,11 @@ library(ggplot2) #load ggplot2 package
 
 ```{r}
 load('a2_stem_shinydata.RData')
-#load(file.path(output_dir,version_name,folder_name_short,'shinydata.RData'))
 css <- "#table{
   background: yellow;
   font-size: 12px;
 }"
 ```
-
-
 
 #R shiny App
 ```{r}
@@ -198,7 +182,7 @@ ui <- fluidPage(#theme = shinytheme("cosmo"),
 server <- function(input, output) {
   #to put in reactive in select name in future
   output$folder_name <- renderText({"Alclat2_stem"})
-  trace_col <-  colorRampPalette(brewer.pal(9,"Blues"))(36)
+  trace_col <-  colorRampPalette(brewer.pal(10,"Blues"))(36)
   start_col_idx <- 1
   #prepare for embolism list
   emb_num_list <- reactive({embo_table_alpha[(input$time*60-embo_table_alpha$`time_since_start(mins)`)>0,"number_emb"]})
@@ -264,13 +248,13 @@ shinyApp(ui = ui, server = server)
 
 ```{r}
 polygon_vertices <- read.csv('polygon_vertices_df.csv',row.names = 1)
-polygon_vertices_4 <- polygon_vertices[polygon_vertices$Z %in% c(4),]
-polygon_vertices_1 <- polygon_vertices[polygon_vertices$Z %in% c(1),]
+polygon_vertices_4 <- polygon_vertices[polygon_vertices$z %in% c(4),]
+polygon_vertices_1 <- polygon_vertices[polygon_vertices$z %in% c(1),]
 fig <- plot_ly(x = ~polygon_vertices_1$y, y = ~polygon_vertices_1$x, type = 'scatter',mode= 'lines', fill = 'to')
 fig <- fig %>% layout(xaxis = list(title = 'row',range = c(0,650 + 50)),
          yaxis = list(title = 'col',range = c(0,950 + 50) ))
 for (i in c(2,4,5,9)) {
-  fig <- fig %>% add_trace(data = polygon_vertices[polygon_vertices$Z %in% c(i),], x = ~y, y = ~x, type = 'scatter',mode= 'lines', fill = 'tonexty' )}
+  fig <- fig %>% add_trace(data = polygon_vertices[polygon_vertices$z %in% c(i),], x = ~y, y = ~x, type = 'scatter',mode= 'lines', fill = 'tonexty' )}
 ```
 
 
